CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(01-TRIANGLE)

SET(TargetName 01_Triangle)

ADD_EXECUTABLE(${TargetName} "main.cpp")

SET_PROPERTY(TARGET ${TargetName} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${TargetName} PROPERTY CXX_STANDARD_REQUIRED ON)

TARGET_LINK_LIBRARIES(${TargetName} PUBLIC D3D12Lab)
